[project]
name = "nmf-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "mlx>=0.28.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
